--- a/hurumap/templates/_footer.html
+++ b/hurumap/templates/_footer.html
@@ -9,10 +9,11 @@
         <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">Creative Commons 4 Attribution license</a>. Reuse it to help empower your own community. The code is available on
         <a href="{{ HURUMAP.github_url }}" target="_blank">GitHub</a> and data is available on <a
                 href="{{ HURUMAP.openafrica_url }}" target="_blank">​openAFRICA​</a>.</p>
+    <br/>
 </div>
 <div class="column-quarter">
     <p>Other HURUmap Projects:</p>
-    <ul>
+    <ul class="smaller">
         <li>
             <a href="https://pesacheck.org" target="_blank">PesaYetu</a>
         </li>
@@ -22,18 +23,18 @@
     </ul>
     <br/>
     <p>Join Our Community:</p>
-    <ul>
+    <ul class="smaller">
         <li>
             <a href="https://facebook.com/HacksHackersAfrica" target="_blank">Hacks/Hackers Africa</a>
         </li>
     </ul>
 </div>
-<div class="column-quarter centered">
+<div class="column-quarter text-center">
     <p>A project by:</p>
     {% block footer_branding %}
         <a href="https://codeforafrica.org" target="_blank">
             <img src="{% static 'img/logos/cfafrica-white.png' %}" alt="Code for Africa" style="margin-top: 0;"></a>
         <a href="https://icfj.org" target="_blank">
-            <img src="{% static 'img/logos/icfj-white.png' %}" alt="ICFJ" style="max-height: 40px;"></a>
+            <img src="{% static 'img/logos/icfj-white.png' %}" alt="ICFJ" style="max-height: 42px;"></a>
     {% endblock %}
 </div>
