--- a/hurumap/templates/blocks/showcase.html
+++ b/hurumap/templates/blocks/showcase.html
@@ -1,8 +1,8 @@
 <a name="showcase"></a>
 <div class="showcase {{ extra_css_class }}">
-    <div class="container-narrow clearfix centered">
-        <h1>Explore our Showcase</h1>
-        <p>Sample stories written with the help of HURUmap</p>
+    <div class="container-narrow clearfix text-center">
+        <h1>Story Showcase</h1>
+        <p>Explore how people are using {{ HURUMAP.name }} to improve their storytelling.</p>
         <br/>
         {% for story in HURUMAP.showcase_stories %}
             <div class="column-third">
@@ -12,6 +12,7 @@
                 <p>{{ story.brief }}</p>
                 <br/>
                 <p class="clearfix"><a href="{{ story.link }}" target="_blank" rel="noopener" class="btn btn-lg bg-bottle-green">Read more</a></p>
+                <br/>
             </div>
         {% endfor %}
     </div>
