--- a/hurumap/templates/homepage_country.html
+++ b/hurumap/templates/homepage_country.html
@@ -11,10 +11,10 @@
 {% endblock %}
 
 {% block header_content %}
-<div class="content-container clearfix bg-ocean-green centered">
+<div class="content-container clearfix bg-ocean-green text-center">
     <div class="wrapper">
         <h1>Discover the Stories Behind the Data</h1>
-        <h4>HURUmap is a tool aimed at helping journalists add content and depth to stories.</h4>
+        <h4>{{ HURUMAP.name }} helps storytellers and campaigners use data to add context and depth to stories.</h4>
     </div>
 </div>
 {% endblock header_content %}
