--- a/hurumap/templates/_base.html
+++ b/hurumap/templates/_base.html
@@ -8,7 +8,7 @@
 
 {% block head_css %}
     {{ block.super }}
-    <link href="https://fonts.googleapis.com/css?family=Lato|Poppins" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400|Poppins:400,500,600" rel="stylesheet">
     <link rel="stylesheet" href="{% sass_src 'css/hurumap.scss' %}">
 {% endblock %}
 
@@ -44,7 +44,11 @@
                         <li><a href="/about">About</a></li>
                         <li><a href="/#showcase">Showcase</a></li>
                         <li><a href="https://facebook.com/HacksHackersAfrica" target="_blank" rel="noopener">Community</a></li>
-                        <li><a href="mailto:{{ HURUMAP.contact_email }}">Contact</a></li>
+                        <li class="social-icons">
+                            <a href="https://twitter.com/{{ HURUMAP.twitter }}"><i class="fa fa-twitter fa-lg fa-fw"></i></a>
+                            <a href="https://facebook.com/{{ HURUMAP.facebook }}"><i class="fa fa-facebook fa-lg fa-fw"></i></a>
+{#                            <a href="mailto:{{ HURUMAP.contact_email }}"><i class="fa fa-envelope-o fa-lg"></i></a>#}
+                        </li>
                     {% endblock header_menu %}
                 </ul>
 
