--- a/hurumap/templates/blocks/partners.html
+++ b/hurumap/templates/blocks/partners.html
@@ -1,5 +1,5 @@
 <div class="showcase clearfix partners {{ extra_css_class }}">
-    <div class="wrapper centered">
+    <div class="wrapper text-center">
         <h2>Partners</h2>
         <p>HURUmap is made possible through support from the following partners:</p>
 
@@ -9,7 +9,10 @@
             <img src="{{ STATIC_URL }}img/logos/datazetu.png" alt="Data Zetu"></a>
         <a href="http://twaweza.org/" target="_blank" rel="noopener">
             <img src="{{ STATIC_URL }}img/logos/twaweza.png" alt="Twaweza"></a>
+        <br/>
+        <a href="https://www.gatesfoundation.org/" target="_blank" rel="noopener">
+            <img src="{{ STATIC_URL }}img/logos/bmgf.png" alt="BMGF"></a>
         <a href="https://icfj.org/" target="_blank" rel="noopener">
-            <img src="{{ STATIC_URL }}img/logos/icfj.png" alt="ICFJ"></a>
+            <img src="{{ STATIC_URL }}img/logos/icfj-long.png" alt="ICFJ"></a>
     </div>
 </div>
