Early changes for TZ

--- a/hurumap_tz/templates/homepage.html
+++ b/hurumap_tz/templates/homepage.html
@@ -1,7 +1,7 @@
-{% extends 'homepage.html' %}{% load humanize partition staticfiles %}
+{% extends 'homepage_country.html' %}{% load humanize partition staticfiles %}
 
 {% block content_container %}
-<div class="content-container clearfix banner">
+<div class="content-container clearfix text-center">
     <article class="wrapper">
         <section class="column-full clearfix">
             <h1 class="article-header">Discover the Stories Behind the Data</h1>
