--- a/pesayetu/templates/profile/profile_detail.html
+++ b/pesayetu/templates/profile/profile_detail.html
@@ -1,41 +1,46 @@
 {% extends 'profile/profile_detail.html' %} {% block profile_header_tail %}
-<div class="column-full">
-    <p class="caption"><strong>Budget Allocation data:</strong> 2013, 2014, 2015, 2016, 2017</p>
-</div>
+    <div class="column-full">
+        <p class="caption"><strong>Budget Allocation data:</strong> 2013, 2014,
+            2015, 2016, 2017</p>
+    </div>
 {% endblock %} {% block profile_detail %}
 
 
-<article id="demographics" class="clearfix {% if 'demographics' not in selected_sections %}hide{% endif %}">
-    <header class="section-contents">
-        <h1>Demographics</h1>
-    </header>
-    <div class="section-container">
+    <article id="demographics"
+             class="clearfix {% if 'demographics' not in selected_sections %}hide{% endif %}">
+        <header class="section-contents">
+            <h1>Budget Data</h1>
+        </header>
+        <div class="section-container">
 
-        <section class="clearfix stat-row">
-            <h2 class="header-for-columns"><a class="permalink" href="#pop_count" id="pop_count">Population <i class="fa fa-link"></i></a></h2>
-            <div class="column-quarter">
-                {% include 'profile/_blocks/_stat_list.html' with stat=demographics.total_population stat_type='number' %}
-            </div>
-            <div class="column-quarter" id="chart-pie-demographics-sex_ratio" data-stat-type="percentage" data-chart-title="Sex"></div>
-            <div class="column-quarter">
-                {% include 'profile/_blocks/_stat_list.html' with stat=demographics.urbanised stat_type='percentage' %}
-            </div>
-            <div class="column-quarter" id="chart-grouped_column-demographics-urban_distribution" data-stat-type="scaled-percentage"
-                data-chart-title="Urban vs rural by sex"></div>
-        </section>
-        <section class="clearfix stat-row">
-            <h2 class="header-for-columns"><a class="permalink" href="#age" id="age">Age <i class="fa fa-link"></i></a></h2>
-            <div class="column-quarter">
-                {% include 'profile/_blocks/_stat_list.html' with stat=demographics.median_age stat_type='number' %}
-            </div>
-            <div class="column-half">
-                <div id="chart-histogram-demographics-age_group_distribution" data-stat-type="scaled-percentage" data-chart-title="Population by age range"></div>
-            </div>
-            <div class="column-quarter" id="chart-pie-demographics-age_category_distribution" data-stat-type="percentage" data-chart-title="Population by age category"></div>
-        </section>
+            <section class="clearfix stat-row">
+                <h2 class="header-for-columns"><a class="permalink"
+                                                  href="#pop_count"
+                                                  id="pop_count">Equitable
+                    Allocations <i class="fa fa-link"></i></a></h2>
+                <div class="column-half">
+                    {% include 'profile/_blocks/_stat_list.html' with stat=budget.fy2013_2014 stat_type='number' %}
+                </div>
+                <div class="column-half">
+                    {% include 'profile/_blocks/_stat_list.html' with stat=budget.fy2014_2015 stat_type='number' %}
+                </div>
+                <div class="column-half">
+                    {% include 'profile/_blocks/_stat_list.html' with stat=budget.fy2015_2016 stat_type='number' %}
+                </div>
+                <div class="column-half">
+                    {% include 'profile/_blocks/_stat_list.html' with stat=budget.fy2016_2017 stat_type='number' %}
+                </div>
 
-    </div>
-</article>
+            </section>
+            <section class="clearfix stat-row">
+                <div class="column-three-quarters"
+                     id="chart-histogram-budget-budget_allocation"
+                     data-stat-type="dollar"
+                     data-chart-title="Allocation Distribution"></div>
+            </section>
+
+        </div>
+    </article>
 
 
 {% endblock %}
