added pesayetu content to about page

--- a/pesayetu/templates/_base.html
+++ b/pesayetu/templates/_base.html
@@ -9,7 +9,7 @@
 {% block head_css %}
     {{ block.super }}
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400|Poppins:400,500,600" rel="stylesheet">
-    <link rel="stylesheet" href="{% sass_src 'css/hurumap.scss' %}">
+    <link rel="stylesheet" href="{% sass_src 'css/pesayetu.scss' %}">
 {% endblock %}
 
 {% block favicon %}
