--- a/pesayetu/templates/_footer.html
+++ b/pesayetu/templates/_footer.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 
 <div class="column-half">
-    <p class="smaller"><strong>HURUmap</strong> gives infomediaries like journalists and civic activists an easy ‘plug & play’ toolkit for finding and embedding interactive data visualisations into their storytelling.</p>
+    <p class="smaller"><strong>PesaYetu</strong> helps citizens understand where public money is going in terms of allocation, showing trends and sources of this revenue, be it taxpayer money or donor funds.</p>
     <p class="small">
                 The project is built on <a href="http://wazimap.readthedocs.org/" target="_blank" rel="noopener">Wazimap</a>, an open source platform by <a href="https://openup.org.za/" target="_blank" rel="noopener">OpenUp</a> and <a href="http://www.mediamonitoringafrica.org/" target="_blank" rel="noopener">Media Monitoring Africa</a> for making census data more understandable.</p>
     <p class="small">This site is a project of <strong><a
@@ -12,10 +12,10 @@
     <br/>
 </div>
 <div class="column-quarter">
-    <p>Other HURUmap Projects:</p>
+    <p>Other Projects:</p>
     <ul class="smaller">
         <li>
-            <a href="https://pesacheck.org" target="_blank">PesaYetu</a>
+            <a href="https://hurumap.org" target="_blank">HURUmap</a>
         </li>
         <li>
             <a href="#" target="_blank">AP (coming soon)</a>
