--- a/pesayetu/templates/profile/profile_detail.html
+++ b/pesayetu/templates/profile/profile_detail.html
@@ -42,7 +42,7 @@
         </div>
     </article>
 
-        <article id="budget"
+    <article id="budget"
              class="clearfix {% if 'demographics' not in selected_sections %}hide{% endif %}">
         <header class="section-contents">
             <h1>Ceilings on Recurrent Expenditure by Counties</h1>
@@ -52,7 +52,8 @@
             <section class="clearfix stat-row">
                 <h2 class="header-for-columns"><a class="permalink"
                                                   href="#pop_count"
-                                                  id="pop_count">County Assembly <i class="fa fa-link"></i></a></h2>
+                                                  id="pop_count">County Assembly
+                    <i class="fa fa-link"></i></a></h2>
                 <div class="column-half">
                     {% include 'profile/_blocks/_stat_list.html' with stat=expenditure_ceilings.county_assembly.fy2015_2016 stat_type='number' %}
                 </div>
@@ -65,7 +66,8 @@
             <section class="clearfix stat-row">
                 <h2 class="header-for-columns"><a class="permalink"
                                                   href="#pop_count"
-                                                  id="pop_count">County Executive <i class="fa fa-link"></i></a></h2>
+                                                  id="pop_count">County
+                    Executive <i class="fa fa-link"></i></a></h2>
                 <div class="column-half">
                     {% include 'profile/_blocks/_stat_list.html' with stat=expenditure_ceilings.county_executive.fy2015_2016 stat_type='number' %}
                 </div>
@@ -74,12 +76,40 @@
                 </div>
 
             </section>
-{#            <section class="clearfix stat-row">#}
-{#                <div class="column-three-quarters"#}
-{#                     id="chart-histogram-budget-budget_allocation"#}
-{#                     data-stat-type="dollar"#}
-{#                     data-chart-title="Allocation Distribution"></div>#}
-{#            </section>#}
+            {#            <section class="clearfix stat-row">#}
+            {#                <div class="column-three-quarters"#}
+            {#                     id="chart-histogram-budget-budget_allocation"#}
+            {#                     data-stat-type="dollar"#}
+            {#                     data-chart-title="Allocation Distribution"></div>#}
+            {#            </section>#}
+
+        </div>
+    </article>
+
+
+    <article id="conditional_funds_15_16"
+             class="clearfix {% if 'demographics' not in selected_sections %}hide{% endif %}">
+        <header class="section-contents">
+            <h1>Conditional Funds</h1>
+        </header>
+        <div class="section-container">
+
+            <section class="clearfix stat-row">
+                <h2 class="header-for-columns"><a class="permalink"
+                                                  href="#pop_count"
+                                                  id="pop_count">FY 2015/2016 <i class="fa fa-link"></i></a></h2>
+                <div class="column-third">
+                    {% include 'profile/_blocks/_stat_list.html' with stat=conditional_grants_15_16.danida_grant stat_type='number' %}
+                </div>
+                <div class="column-third">
+                    {% include 'profile/_blocks/_stat_list.html' with stat=conditional_grants_15_16.world_bank_loan stat_type='number' %}
+                </div>
+                <div class="column-third">
+                    {% include 'profile/_blocks/_stat_list.html' with stat=conditional_grants_15_16.other_conditional_allocations stat_type='number' %}
+                </div>
+
+
+            </section>
 
         </div>
     </article>
