--- a/hurumap_tz/templates/profile/profile_detail.html
+++ b/hurumap_tz/templates/profile/profile_detail.html
@@ -346,4 +346,22 @@
       </section>
     </div>
 </article>
+<article id="primary_school_teachers" class="clearfix">
+    <header class="section-contents">
+        <h1>Primary School Teachers</h1>
+    </header>
+    <div class="section-container">
+         <section class="clearfix stat-row">
+             <p class="source">Source: <a href="{{ primary_school_teachers.source_link }}">{{ primary_school_teachers.source_name }}</a></p>
+             <br clear="all">
+             <div class="column-half">
+                 {% include 'profile/_blocks/_stat_list.html' with stat=primary_school_teachers.number_of_teachers stat_type='number' %}
+             </div>
+              <div class="column-half">
+                <div class="column-half" id="chart-pie-primary_school_teachers-primary_school_teachers" data-stat-type="percentage" data-chart-title="Distribution of primary school teachers based on gender(2016)" data-initial-sort="-value"></div>
+             </div>
+        </section>
+        <br clear="all">
+    </div>
+</article>
 {% endblock %}
