using variables from settings.py to populate the footer

--- a/hurumap/templates/_footer.html
+++ b/hurumap/templates/_footer.html
@@ -14,9 +14,11 @@
 <div class="column-quarter">
     <p>Other HURUmap Projects:</p>
     <ul class="smaller">
+        {% if HURUMAP.name != 'PesaYetu' %}
         <li>
             <a href="https://pesacheck.org" target="_blank">PesaYetu</a>
         </li>
+        {% endif %}
         <li>
             <a href="#" target="_blank">AP (coming soon)</a>
         </li>
