--- a/pesayetu/templates/homepage_country.html
+++ b/pesayetu/templates/homepage_country.html
@@ -20,6 +20,11 @@
 {% endblock header_content %}
 
 
+{% block header_logo %}
+<h2 style="margin: 7px 0 0 0;">{{ HURUMAP.name }}</h2>
+{% endblock %}
+
+
 {% block content_container %}
 
     <div class="clearfix">
