--- a/league_table/templates/profile/profile_detail.html
+++ b/league_table/templates/profile/profile_detail.html
@@ -12,9 +12,8 @@
         <div class="nav-menu">
             <ul id="site-menu">
                 {% block header_menu %}
-                    <li><a href="#">Schools</a></li>
-                    <li><a href="#">Statistics</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="/schools">Schools</a></li>
+                    <li><a href="/about">About</a></li>
                 {% endblock header_menu %}
             </ul>
 
@@ -22,7 +21,7 @@
                 {% block nav_tools %}
                 <div id="menu" class="tool-set clearfix">
                     <div class="tool-group">
-                        <input name="geography_select" id="geography-select" type="text" placeholder="Search School" autocomplete="off">
+                        <input name="geography_select" id="geography-select" type="text" placeholder="Search Place" autocomplete="off">
                     </div>
                     {% if not hide_nav_compare %}
                     {% comment %}
@@ -63,59 +62,131 @@
                 <div class="stat">
                     <span class="primary">
                         {% block profile_header_population %}
-                        <span class="value">{{ demographics.total_population.values.this|floatformat:"0" }}</span>
-                        <span class="name">Population</span>
+                        <span class="value">{{ schools.top_schools|length }}</span>
+                        <span class="name">Total Secondary Schools</span>
                         {% endblock %}
                     </span>
                 </div>
             </div>
-            {% if geography.this.square_kms %}
-            <div class="column-half">
-                <div class="stat">
-                    <span class="secondary">
-                        <span class="value">{% if geography.this.square_kms < 1.0 %}{{ geography.this.square_kms|floatformat:"3" }}{% else %}{{ geography.this.square_kms|floatformat:"1" }}{% endif %}</span>
-                        <span class="name"> square kilometres</span>
-                    </span>
-                    {% if demographics.population_density.values.this %}
-                    <span class="secondary">
-                        {% block profile_header_density %}
-                        <span class="value">{{ demographics.population_density.values.this|floatformat:"1" }}</span>
-                        <span class="name"> people per square kilometre</span>
-                        {% endblock %}
-                    </span>
-                    {% endif %}
-                    {% block geography_extra_sq_km %}
-                    {% endblock %}
-                </div>
-            </div>
-            {% endif %}
 
             {% if geography.this.show_extra_links %}
                 {% include "profile/_blocks/_header_extra_links.html" %}
             {% endif %}
-
-            {% block profile_header_tail %}
-                <div class="column-full">
-                    <p class="caption"><strong>Open data:</strong> 2016</p>
-                </div>
-            {% endblock %}
         </article>
     </div>
 </div>
 {% endblock %}
+
+<div class="content-container wrapper clearfix" style="overflow:auto;">
+    <div class="holder" style="margin-bottom: 0px;">
+        <div class="" style="width: 100%;">
+            <center><h2>10 Top Schools in {{ geography.this.short_name }}</h2></center>
+            <br />
+            <table style="width: 100%; margin-bottom: 0px;">
+                <thead>
+                    <tr>
+                        <th style="text-align:left;">No</th>
+                        <th style="text-align:left;">Name</th>
+                        <th>Pass Rate</th>
+                        <th>National Rank</th>
+                        <th>Regional Rank</th>
+                        <th style="text-align: right;">Stats</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for school in schools.top_schools|slice:":10" %}
+                        <tr>
+                            <td style="text-align:left;">{{ forloop.counter }}</td>
+                            <td>{{ school.name }}</td>
+                            <td style="text-align:center;">{{ school.pass_rate }}</td>
+                            <td style="text-align:center;">{{ school.national_rank_all }}</td>
+                            <td style="text-align:center;">{{ school.regional_rank_all }}</td>
+                            <td style="text-align: right;"><a href="/schools/{{ school.code }}"><i class="fa fa-bar-chart"></i></a></td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+
+            <br />
+            <hr />
+            <br />
+
+            <center><h2>10 Lowest Schools in {{ geography.this.short_name }}</h2></center>
+            <br />
+            <table style="width: 100%; margin-bottom: 0px;">
+                <thead>
+                    <tr>
+                        <th style="text-align:left;">No</th>
+                        <th style="text-align:left;">Name</th>
+                        <th>Pass Rate</th>
+                        <th>National Rank</th>
+                        <th>Regional Rank</th>
+                        <th style="text-align: right;">Stats</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for school in schools.lowest_schools|slice:":10" %}
+                        <tr>
+                            <td style="text-align:left;">{{ forloop.counter }}</td>
+                            <td>{{ school.name }}</td>
+                            <td style="text-align:center;">{{ school.pass_rate }}</td>
+                            <td style="text-align:center;">{{ school.national_rank_all }}</td>
+                            <td style="text-align:center;">{{ school.regional_rank_all }}</td>
+                            <td style="text-align: right;"><a href="/schools/{{ school.code }}"><i class="fa fa-bar-chart"></i></a></td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+
+            <br />
+            <hr />
+            <br />
+        </div>
+    </div>
+</div>
 {% endblock %}
 
 {% block profile_detail %}
 <article id="schools" class="clearfix">
     <header class="section-contents">
-        <h1> Schools</h1>
+        <h1> Ownership</h1>
     </header>
     <div class="section-container">
         <section class="clearfix stat-row">
-            <h2><a class="permalink" href="#private">Ownership <i class="fa fa-link"></i></a></h2>
+            <br />
             <div class="column-two-thirds" id="chart-bar-schools-schools_distribution" data-stat-type="scaled-percentage"
                 data-chart-title="Schools by ownership status" data-qualifier="Universe: {{ schools_distribution.metadata.universe }}"></div>
         </section>
     </div>
 </article>
+
+<article id="schools" class="clearfix" style="overflow:auto;">
+    <header class="section-contents">
+        <h1> Regions</h1>
+    </header>
+    <div class="section-container" style="overflow:auto;">
+        <section class="clearfix stat-row">
+            <br />
+            <div class="column-full" id="chart-column-schools-region_distribution" data-stat-type="scaled-percentage"
+                data-chart-title="Schools by region status" data-qualifier="Universe: {{ region_distribution.metadata.universe }}"></div>
+        </section>
+    </div>
+</article>
+
+<article id="schools" class="clearfix">
+        <header class="section-contents">
+            <h1> Averege GPA</h1>
+        </header>
+        <div class="section-container">
+            <section class="clearfix stat-row">
+                <h2 class="header-for-columns"><a class="permalink" href="#age" id="age">GPA <i class="fa fa-link"></i></a></h2>
+                <div class="column-quarter">
+                    {% include 'profile/_blocks/_stat_list.html' with stat=schools.median_gpa stat_type='number' %}
+                </div>
+                <div class="column-half">
+                    <div id="chart-histogram-schools-gpa_group_distribution" data-stat-type="scaled-percentage" data-chart-title="Average gpa range"></div>
+                </div>
+            </section>
+        </div>
+    </article>
 {% endblock %}
