--- a/league_table/templates/specific_school.html
+++ b/league_table/templates/specific_school.html
@@ -1,7 +1,12 @@
 {% extends 'profile/profile_detail.html' %}
 
 {% block header %}
-<header id="page-header" style="background: #204d8a;">
+<style>
+    #page-footer, #page-header {
+        background: #204d8a;
+    }
+</style>
+<header id="page-header">
     <div id="page-header-title" class="wrapper clearfix">
         <i id="menu-toggle" class="fa fa-bars"></i>
         <a class="title" href="{% url 'homepage' %}">
