Changing footer on profile detail layout

--- a/league_table/templates/profile/profile_detail.html
+++ b/league_table/templates/profile/profile_detail.html
@@ -195,3 +195,7 @@
         </div>
     </article>
 {% endblock %}
+
+{% block footer_content %}
+{% include 'footer.html' %}
+{% endblock footer_content %}
